--- a/smart-presenter/package.json
+++ b/smart-presenter/package.json
@@ -13,6 +13,7 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/uws": "^0.13.2",
     "core-js": "^3.4.4",
+    "cryptico": "^1.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uws": "^100.0.1",
