--- a/smart-presenter/package.json
+++ b/smart-presenter/package.json
@@ -14,6 +14,7 @@
     "@types/uws": "^0.13.2",
     "core-js": "^3.4.4",
     "cryptico": "^1.0.2",
+    "qrcode": "^1.4.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uws": "^100.0.1",
